--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 __pycache__/
 *.py[cod]
 *$py.class
-.idea/
 # C extensions
 *.so
 
@@ -99,3 +98,6 @@ ENV/
 
 # mypy
 .mypy_cache/
+
+#user defined 
+.idea/
